Tweaking some colors

--- a/css/main.scss
+++ b/css/main.scss
@@ -3,10 +3,10 @@
 ---
 @charset "utf-8";
 
-$yarn-blue-light: #badae8;
-$yarn-blue: #2c8ebb;
-$yarn-blue-dark: #2188b6;
-$yarn-blue-darker: #1b7eab;
+$yarn-blue-light: #2c8ebb;
+$yarn-blue: #badae8;
+$yarn-blue-dark: #1b7eab;
+$yarn-blue-darker: #2188b6;
 $yarn-blue-darkest: #1476a2;
 
 $text-muted: #52585e;
